# 30122-project-parksandrec

./: .gitignore  README.md  hello.py  land_data_explore.py  landuse_cleaning.ipynb  pyproject.toml
milestones/: milestone1.md  milestone2.md
parksandrec/: __main__.py  app.py  download.py  query.py
parksandrec/preprocessing/: acs.py  geospatial.py  merge.py  scraping.py
parksandrec/tests/: test_acs.py  test_geospatial_join.py  test_merge.py
parksandrec/viz/: charts.py  colormap.py  maps.py  temp.py
viz/: maps.py
