[project]
name = "30122-project-parksandrec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "census>=0.8.23",
    "pandas>=2.2.3",
    "us>=3.2.0",
    "geopandas>=1.0.1",
    "altair>=5.5.0",
    "vega-datasets>=0.9.0",
    "shapely>=2.0.7",
    "pygris>=0.1.6",
]
