[project]
name = "30122-project-parksandrec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "census>=0.8.23",
    "pandas>=2.2.3",
    "us>=3.2.0",
    "geopandas>=1.0.1",
    "altair>=5.5.0",
    "vega-datasets>=0.9.0",
    "shapely>=2.0.7",
    "pygris>=0.1.6",
    "ipykernel>=6.29.5",
    "pathlib>=1.0.1",
    "fiona>=1.10.1",
    "matplotlib>=3.10.1",
    "lxml>=5.3.1",
    "httpx>=0.28.1",
    "mapclassify>=2.8.1",
    "folium>=0.19.5",
]
